--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/my-dream-app",
+            "outputPath": "dist/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,9 +23,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
@@ -47,6 +49,16 @@
             }
           }
         },
+        "server":{
+          "builder": "@angular-devkit/build-angular:server",
+          "options":{
+            "outputPath":"dist/server",
+            "main":"src/main.server.ts",
+            "tsConfig":"src/tsconfig.server.json"
+          }
+        },
+     
+       
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
